Bug 773687 - Fix assertion pattern in RegExp with sticky flag. r=till

--HG--
extra : rebase_source : 42307a81dcee87426ace32a276f34281b550bc7f